buildscript {
    repositories {
        maven {
            url 'https://plugins.gradle.org/m2/'
        }
    }

    dependencies {
        classpath 'com.github.johnrengelman.shadow:com.github.johnrengelman.shadow.gradle.plugin:7.1.2'
    }
}

plugins {
    id 'com.github.johnrengelman.shadow' version '7.1.2'
    id 'com.adarshr.test-logger' version '3.2.0'
    id 'java'
    id 'jacoco'
    id 'checkstyle'
}

group 'daq-pubber'
version '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

sourceSets {
    main {
        java {
            srcDirs '../gencode/java'
            srcDirs '../common/src/main/java'
        }
    }
    test {
        java {
            srcDirs '../common/src/test/java'
        }
    }
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        csv.required = false
        html.outputLocation = layout.BuildDirectory.dir('jacocoHtml')
    }
}

// TODO(future): jacocoTestCoverageVerification

checkstyle {
    ignoreFailures = false
    maxWarnings = 0
}
checkstyleMain.source = 'src/main/java'

jar {
    manifest {
        attributes 'Main-Class': 'daq.pubber.Pubber'
    }
}

shadowJar {
    mergeServiceFiles()
}

repositories {
    mavenCentral()
    mavenLocal()
    maven { url 'https://mvnrepository.com' }
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    implementation 'com.sun.xml.bind:jaxb-impl:3.0.1'
    implementation 'commons-io:commons-io:2.5'
    implementation 'com.google.guava:guava:30.1.1-jre'
    implementation 'com.google.cloud:google-cloud-logging:2.3.2'
    implementation 'com.google.cloud:google-cloud-pubsub:1.66.0'
    implementation('com.google.api-client:google-api-client:1.31.2') {
        exclude group: 'com.google.guava', module: 'guava-jdk5'
    }
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.4'
    implementation('com.google.apis:google-api-services-cloudiot:v1-rev20210323-1.31.0') {
        exclude group: 'com.google.guava', module: 'guava-jdk5'
    }
    implementation 'joda-time:joda-time:2.10.10'
    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
    implementation('io.moquette:moquette-broker:0.15') {
        exclude group: 'org.slf4j', module: 'slf4j-log4j12'
    }
    implementation 'org.slf4j:slf4j-simple:1.7.30'
    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
    testImplementation 'org.mockito:mockito-core:3.11.2'
}
